--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "code-quality-tool",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -71,8 +71,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/aws-lambda": "^8.10.150",
     "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
