--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "groq-sdk": "^0.25.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "monaco-editor": "^0.52.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
