--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -52,6 +53,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "monaco-editor": "^0.52.2",
+    "@monaco-editor/react": "^4.6.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
